--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,400;0,900;1,400&family=Inter:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@400;700;900&family=Lora:ital,wght@0,400;0,700;1,400&family=Space+Grotesk:wght@300;400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Orbitron:wght@400;700;900&display=swap"
     rel="stylesheet">
 
+  <style>
+    body {
+      background-color: #0A0A0A;
+      margin: 0;
+      color: white;
+    }
+  </style>
+
   <title>Celebration Portal</title>
 </head>
 
