--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Create immersive, cinematic celebration portals for birthdays, anniversaries, graduations, and more. Add photos, videos, music, and share a magic link." />
+  <meta name="theme-color" content="#0A0A0A" />
 
-  <!-- Added Google Fonts -->
+  <!-- Critical fonts only — loaded with display:swap for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Primary UI fonts loaded eagerly -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,400;0,900;1,400&family=Inter:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@400;700;900&family=Lora:ital,wght@0,400;0,700;1,400&family=Space+Grotesk:wght@300;400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Orbitron:wght@400;700;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins:wght@400;700;900&display=swap"
     rel="stylesheet">
+  <!-- Theme-specific fonts loaded async to avoid render blocking -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@400;700;900&family=Lora:ital,wght@0,400;0,700;1,400&family=Space+Grotesk:wght@300;400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Orbitron:wght@400;700;900&display=swap"
+    rel="stylesheet" media="print" onload="this.media='all'">
 
   <style>
     body {
@@ -21,7 +29,7 @@
     }
   </style>
 
-  <title>Celebration Portal</title>
+  <title>Celebration Portal — Create Immersive Stories</title>
 </head>
 
 <body>
